--- a/src/classes/CadenceActionsController.cls
+++ b/src/classes/CadenceActionsController.cls
@@ -2,10 +2,14 @@ public class CadenceActionsController {
     public static String nameSpace = CadenceConstants.NAMESPACE;
     @AuraEnabled
     public static CadenceActionWrapper getActionList(String type){
-        List<action__C> actionList = [Select id, Name, type__C, Activation_Type__c from Action__C];
-        
+        List<action__C> actionList = [Select Id, Name, type__c, Activation_Type__c from Action__c];
+        List<Action> actionClsList = new List<Action>();
+        for (action__C action : actionList){
+            actionClsList.add(New Action(action.Id, action.Activation_Type__c, action.Name, '','', '', action.Type__c));
+        }
         CadenceActionWrapper wrapperObj = new CadenceActionWrapper();
         wrapperObj.actionList = actionList;
+        wrapperObj.actionClsList = actionClsList;
         wrapperObj.actionTypeList = getActionTypeList(actionList);
         wrapperObj.fieldList = CadenceController.getFieldsForSA(type);
         
@@ -13,6 +17,7 @@ public class CadenceActionsController {
     }  
     public class CadenceActionWrapper{
         @AuraEnabled public List<action__C> actionList;
+        @AuraEnabled public List<Action> actionClsList;
         @AuraEnabled public List<string> actionTypeList;
         @AuraEnabled public List<CriterionWrapper> fieldList = New List<CriterionWrapper>{New CriterionWrapper()};
     }
